--- a/src/pages/admin/orders/admin-products/admin-products.component.html
+++ b/src/pages/admin/orders/admin-products/admin-products.component.html
@@ -10,7 +10,7 @@
 
 <ng-template #table>
   <ng-container *ngIf="!isLoading">
-    <div class="table-container">
+    <div class="table-container mt-5">
       <table mat-table [dataSource]="products" class="mat-elevation-z8 w-full " matSort>
         <!-- Image Column -->
         <ng-container matColumnDef="imageUrl" >
