--- a/src/pages/admin/orders/admin-users/admin-users.component.html
+++ b/src/pages/admin/orders/admin-users/admin-users.component.html
@@ -11,7 +11,7 @@
 
 <ng-template #table>
   <ng-container *ngIf="!isLoading">
-    <div class="table-container">
+    <div class="table-container mt-5">
       <table mat-table [dataSource]="users" class="mat-elevation-z8 w-full" matSort>
 
         <!-- Email Column -->
