--- a/src/pages/home/home.component.html
+++ b/src/pages/home/home.component.html
@@ -1,5 +1,5 @@
 
-<div class="flex flex-col gap-4  pr-10 max-h-[80vh] overflow-auto">
+<div class="mt-5 flex flex-col gap-4  pr-10 max-h-[80vh] overflow-auto">
     <!-- Product Grid -->
     <div *ngIf="!isLoading" class="grid grid-cols-1 md:grid-cols-4 lg:grid-cols-6 gap-4">
       <div *ngFor="let product of products; let i = index" class="border rounded shadow p-4 bg-white">
