feat(UI):mobile style , fix image upload

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
   <main class="px-2 lg:px-10 mx-auto h-full ">
     <router-outlet></router-outlet>
   </main>
- <app-footer></app-footer>
+ <app-footer class="hidden md:flex"></app-footer>
 </div>
