--- a/src/layout/components/footer/footer.component.html
+++ b/src/layout/components/footer/footer.component.html
@@ -87,7 +87,7 @@
 <!--    </div>-->
 <!--</footer>-->
 
-<footer class="h-12 bg-gray-200 dark:bg-gray-900 flex items-center justify-between px-4">
+<footer class="h-12 w-full bg-gray-200 dark:bg-gray-900 flex items-center justify-between px-4">
   <div class="flex items-center space-x-2">
     <img src="pubchick.png" alt="brand" class="w-8 h-8 rounded-full" />
     <span class="text-sm text-gray-600 dark:text-gray-400">© {{year}} All Rights Reserved</span>
