--- a/src/layout/components/cart/cart.component.html
+++ b/src/layout/components/cart/cart.component.html
@@ -1,4 +1,4 @@
-<section class="border-blue-500 mt-10">
+<section class="border-blue-500 mt-15 md:mt-10">
   <h3 class="text-3xl font-semibold text-gray-700 text-center mb-3">
     סיכום הזמנה
     <i title="Shopping Cart" class="fa-solid fa-bag-shopping mr-2"></i>
@@ -20,7 +20,7 @@
 
   <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-1 gap-6 w-[90vw] h-full" *ngIf="cart.length>0; else empty">
     <article class="col-span-1 md:col-span-2 lg:col-span-2 ">
-      <div class="border-y-2 border-gray-300 overflow-y-auto max-h-[550px] p-2">
+      <div class="border-y-2 border-gray-300 overflow-y-auto max-h-[67vh] md:max-h-[550px] p-2">
         <app-cartitem
           *ngFor="let item of cart"
           [item]="item"
@@ -28,7 +28,7 @@
         </app-cartitem>
       </div>
 
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-4 w-full items-center">
+      <div class="hidden grid grid-cols-1 md:grid-cols-3 gap-4 w-full items-center">
 
         <!-- Reset Cart -->
         <div class="flex justify-center">
@@ -49,6 +49,7 @@
         <div class="flex justify-center">
           <button
             type="submit"
+            [disabled]="cartService.isLoading"
             (click)="saveOrder()"
             class="flex items-center justify-center gap-2 bg-[#3c64a9] hover:bg-[#2f4e89] text-white px-20 py-3 rounded shadow text-xl font-semibold">
             <span class="text-lg">תשלום</span>
@@ -58,6 +59,26 @@
 
       </div>
 
+      <!-- Tabs at the bottom of the page -->
+      <div class="md:hidden grid grid-cols-3 fixed bottom-0 left-0 w-full bg-gray-900 text-white shadow-lg border-t border-gray-300 z-50">
+        <button class="flex flex-col items-center justify-center py-2 w-full">
+          <i class="fa-solid fa-xmark text-xl"></i>
+          <span class="text-sm mt-1">ביטול</span>
+        </button>
+        <button class="flex flex-col items-center justify-center py-2 w-full">
+          <i class="fa-solid fa-money-bill text-xl"></i>
+          <span class="text-sm mt-1">תשלום ידני</span>
+        </button>
+        <button class="flex flex-col items-center justify-center py-2 w-full">
+          <i class="fa-solid fa-credit-card text-xl"></i>
+          <span class="text-sm mt-1">תשלום</span>
+        </button>
+      </div>
+
+
+      <div>
+
+      </div>
 
     </article>
   </div>
