--- a/src/pages/home/home.component.html
+++ b/src/pages/home/home.component.html
@@ -1,8 +1,8 @@
 
-<div class="mt-5 flex flex-col gap-4  pr-10 max-h-[80vh] overflow-auto">
+<div class="mt-15 md:mr-5 flex flex-col gap-4  pr-1  pb-5 md:pb-1 md:pr-10 w-[90vw] max-h-[80vh] overflow-auto">
     <!-- Product Grid -->
     <div *ngIf="!isLoading" class="grid grid-cols-1 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <div *ngFor="let product of products; let i = index" class="border rounded shadow p-4 bg-white">
+      <div *ngFor="let product of products; let i = index" class="grid  justify-center border rounded shadow p-4 bg-white">
 
         <div class="grid grid-cols-1 grid-rows-2 gap-1 justify-items-center  items-center">
           <img
