feat(UI):mobile style , order list , cart , login and register

--- a/src/layout/components/cart/cart.component.html
+++ b/src/layout/components/cart/cart.component.html
@@ -1,8 +1,16 @@
 <section class="border-blue-500 mt-15 md:mt-10">
-  <h3 class="text-3xl font-semibold text-gray-700 text-center mb-3">
-    סיכום הזמנה
-    <i title="Shopping Cart" class="fa-solid fa-bag-shopping mr-2"></i>
-  </h3>
+  <div class="grid grid-cols-[10%_auto_60%] items-center mb-3 text-right rtl">
+    <!-- Back Button (Right in RTL) -->
+    <button (click)="goBack()" class="justify-self-start text-black dark:text-white">
+      <i class="fas fa-arrow-left text-2xl text-gray-700"></i>
+    </button>
+    <h3 class="text-2xl font-semibold text-gray-700 text-center">{{total | currency: 'ILS' }}</h3>
+    <!-- Title Centered -->
+    <h3 class="text-2xl font-semibold text-gray-700 text-right">
+      סיכום הזמנה
+      <i title="Shopping Cart" class="fa-solid fa-bag-shopping mr-2"></i>
+    </h3>
+  </div>
   <ng-template #empty>
     <section class="flex justify-center items-center h-[60vh]">
       <div class="text-gray-500 flex flex-col justify-center items-center">
@@ -28,12 +36,12 @@
         </app-cartitem>
       </div>
 
-      <div class="hidden grid grid-cols-1 md:grid-cols-3 gap-4 w-full items-center">
+      <div class="hidden md:grid grid-cols-1 md:grid-cols-3 gap-4 w-full items-center">
 
         <!-- Reset Cart -->
         <div class="flex justify-center">
           <button (click)="clearCart()"
-            class="flex items-center justify-center gap-2 bg-red-600 hover:bg-red-700 text-white px-20 py-3 rounded shadow text-xl font-semibold">
+                  class="flex items-center justify-center gap-2 bg-red-600 hover:bg-red-700 text-white px-20 py-3 rounded shadow text-xl font-semibold">
             <i class="fa-solid fa-trash text-xl"></i>
             <span class="text-lg">מחיקה</span>
           </button>
@@ -60,27 +68,26 @@
       </div>
 
       <!-- Tabs at the bottom of the page -->
-      <div class="md:hidden grid grid-cols-3 fixed bottom-0 left-0 w-full bg-gray-900 text-white shadow-lg border-t border-gray-300 z-50">
-        <button class="flex flex-col items-center justify-center py-2 w-full">
+      <div
+        class="md:hidden grid grid-cols-3 fixed bottom-0 left-0 w-full bg-gray-900 text-white shadow-lg border-t border-gray-300 z-50">
+        <button class="flex flex-col items-center justify-center py-2 w-full" (click)="openCancelOrderSheet()">
           <i class="fa-solid fa-xmark text-xl"></i>
           <span class="text-sm mt-1">ביטול</span>
         </button>
-        <button class="flex flex-col items-center justify-center py-2 w-full">
+        <button class="flex flex-col items-center justify-center py-2 w-full" (click)="openManualPaymentSheet()">
           <i class="fa-solid fa-money-bill text-xl"></i>
           <span class="text-sm mt-1">תשלום ידני</span>
         </button>
-        <button class="flex flex-col items-center justify-center py-2 w-full">
+        <button class="flex flex-col items-center justify-center py-2 w-full" (click)="saveOrder()">
           <i class="fa-solid fa-credit-card text-xl"></i>
           <span class="text-sm mt-1">תשלום</span>
         </button>
       </div>
-
-
       <div>
-
       </div>
-
     </article>
   </div>
+
 </section>
 <app-order-summary-sheet *ngIf="showStatus"></app-order-summary-sheet>
+
