--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -1,5 +1,5 @@
 
-<div class="mt-5 p-3 max-w-[430px] min-w-[380px] mx-auto bg-white shadow-lg rounded-lg">
+<div class="mt-15 md:mt-5 p-3 w-[90vw] md:max-w-[430px] md:min-w-[380px] mx-auto bg-white shadow-lg rounded-lg">
   <h4 class="py-4 text-gray-700 text-xl text-center font-semibold border-b">כניסה</h4>
   <div class="mt-5" dir="rtl">
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
