--- a/src/pages/register/register.component.html
+++ b/src/pages/register/register.component.html
@@ -1,5 +1,5 @@
-<div class="p-3 max-w-[430px] min-w-[380px] mx-auto bg-white shadow-lg rounded-lg">
-  <h4 class="py-4 text-gray-700 text-xl text-center font-semibold border-b">רישום</h4>
+<div class="p-3 mt-14 md:mt-5 p-3 w-[90vw] md:max-w-[430px] mx-auto bg-white shadow-lg rounded-lg">
+  <h4 class="py-0 px-4 text-gray-700 text-xl text-center font-semibold border-b">רישום</h4>
   <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" dir="rtl">
       <div class="grid grid-cols-2 gap-2">
         <div class="mb-6">
