--- a/src/layout/components/orders/app-order-summary-sheet/app-order-summary-sheet.component.css
+++ b/src/layout/components/orders/app-order-summary-sheet/app-order-summary-sheet.component.css
@@ -28,5 +28,6 @@ button {
   margin-top: 1.5rem;
   width: 100%;
 }
-
-
+::ng-deep .mat-bottom-sheet-container{
+  background: transparent !important;
+}
