--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -28,7 +28,7 @@
         </div> -->
         <a href="#" class="text-sm font-medium text-gray-600 hover:underline dark:text-gray-500"><b class=" text-center text-blue-800 hover:underline">שכחת סיסמה?</b></a>
       </div>
-      <button type="submit" class="text-white bg-[#3c64a9] hover:bg-[#3c64a9] focus:ring-4 focus:outline-none focus:ring-[#3c64a9]-300 font-medium text-sm px-5 py-3 text-center dark:bg-gray-600 dark:hover:bg-gray-700 dark:focus:ring-gray-800 w-full">Login </button>
+      <button type="submit" class="text-white bg-[#3c64a9] hover:bg-[#3c64a9] focus:ring-4 focus:outline-none focus:ring-[#3c64a9]-300 font-medium text-sm px-5 py-3 text-center dark:bg-gray-600 dark:hover:bg-gray-700 dark:focus:ring-gray-800 w-full">כניסה</button>
       <p class="mt-4 text-sm text-center">
         לא זוכר.ת?
         <a [routerLink]="['/register']" class="text-gray-600 hover:underline dark:text-gray-500"><b class="text-blue-800 hover:underline">רישום</b></a>
