--- a/src/layout/components/header/header.component.html
+++ b/src/layout/components/header/header.component.html
@@ -11,7 +11,7 @@
       <h6 dir="rtl" class="text-white">{{ displayName }}</h6>
 
     </div>
-    <div  class="mr-0  text-black dark:text-white text-[2rem] unde  rline mat-background-primary">{{pageName$ | async}}</div>
+    <div  class="mr-0 md:relative md:left-[9rem] text-black dark:text-white text-[2rem] font-bold mat-background-primary">{{pageName$ | async}}</div>
     <!-- Menu icon on right -->
     <div class="flex items-center space-x-4">
       <ul class="hidden md:flex items-center  space-x-7 gap-5">
