--- a/src/layout/components/orders/app-order-summary-sheet/app-order-summary-sheet.component.css
+++ b/src/layout/components/orders/app-order-summary-sheet/app-order-summary-sheet.component.css
@@ -31,3 +31,6 @@ button {
 ::ng-deep .mat-bottom-sheet-container{
   background: transparent !important;
 }
+::ng-deep   .mat-bottom-sheet-container{
+  box-shadow: unset;
+}
