--- a/src/layout/components/orders/app-order-manual-sheet/app-order-manual-sheet.component.css
+++ b/src/layout/components/orders/app-order-manual-sheet/app-order-manual-sheet.component.css
@@ -33,3 +33,6 @@ input[matInput] {
 ::ng-deep .mat-bottom-sheet-container{
   background: transparent !important;
 }
+::ng-deep   .mat-bottom-sheet-container{
+  box-shadow: unset;
+}
